Refactor for new gaming dataset schema
Updated codebase and documentation to use the new gaming behavior dataset schema with 12 features. Changed API models, README, and notebooks to reflect new feature names and segmentation logic. Added debug scripts for cluster analysis and Kaggle API testing. Updated user segmentation pipeline and model to match new schema and segment definitions.

--- a/notebooks/02_Baseline.ipynb
+++ b/notebooks/02_Baseline.ipynb
@@ -80,9 +80,9 @@
         "## Baseline Feature Set\n",
         "\n",
         "Baseline için en temel ve önemli özellikleri seçiyoruz:\n",
-        "1. **total_sessions**: Toplam oturum sayısı (engagement)\n",
-        "2. **total_playtime_hours**: Toplam oyun süresi (engagement)\n",
-        "3. **total_spent_usd**: Toplam harcama (monetization)\n",
+        "1. **SessionsPerWeek**: Toplam oturum sayısı (engagement)\n",
+        "2. **PlayTimeHours**: Toplam oyun süresi (engagement)\n",
+        "3. **InGamePurchases**: Toplam harcama (monetization)\n",
         "4. **login_frequency_per_week**: Haftalık giriş sıklığı (activity)\n"
       ]
     },
@@ -94,10 +94,10 @@
       "source": [
         "# Baseline feature set - minimal features for segmentation\n",
         "baseline_features = [\n",
-        "    'total_sessions',\n",
-        "    'total_playtime_hours',\n",
-        "    'total_spent_usd',\n",
-        "    'login_frequency_per_week'\n",
+        "    'SessionsPerWeek',\n",
+        "    'PlayTimeHours',\n",
+        "    'InGamePurchases',\n",
+        "    'SessionsPerWeek'\n",
         "]\n",
         "\n",
         "# Prepare data\n",
@@ -325,10 +325,10 @@
         "for cluster_id in range(n_clusters):\n",
         "    cluster_data = df_baseline[df_baseline['cluster'] == cluster_id]\n",
         "    print(f\"\\nCluster {cluster_id} ({len(cluster_data)} users, {len(cluster_data)/len(df_baseline)*100:.1f}%):\")\n",
-        "    print(f\"  Avg Sessions: {cluster_data['total_sessions'].mean():.1f}\")\n",
-        "    print(f\"  Avg Playtime: {cluster_data['total_playtime_hours'].mean():.1f} hours\")\n",
-        "    print(f\"  Avg Spending: ${cluster_data['total_spent_usd'].mean():.2f}\")\n",
-        "    print(f\"  Avg Login Frequency: {cluster_data['login_frequency_per_week'].mean():.2f} per week\")\n"
+        "    print(f\"  Avg Sessions: {cluster_data['SessionsPerWeek'].mean():.1f}\")\n",
+        "    print(f\"  Avg Playtime: {cluster_data['PlayTimeHours'].mean():.1f} hours\")\n",
+        "    print(f\"  Avg Spending: ${cluster_data['InGamePurchases'].mean():.2f}\")\n",
+        "    print(f\"  Avg Login Frequency: {cluster_data['SessionsPerWeek'].mean():.2f} per week\")\n"
       ]
     },
     {
@@ -348,8 +348,8 @@
         "fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
         "\n",
         "# 1. Playtime vs Spending\n",
-        "scatter1 = axes[0, 0].scatter(df_baseline['total_playtime_hours'], \n",
-        "                               df_baseline['total_spent_usd'],\n",
+        "scatter1 = axes[0, 0].scatter(df_baseline['PlayTimeHours'], \n",
+        "                               df_baseline['InGamePurchases'],\n",
         "                               c=df_baseline['cluster'], \n",
         "                               cmap='viridis', \n",
         "                               alpha=0.6, \n",
@@ -363,14 +363,14 @@
         "# Plot cluster centers\n",
         "centers = scaler.inverse_transform(kmeans_baseline.cluster_centers_)\n",
         "centers_df = pd.DataFrame(centers, columns=baseline_features)\n",
-        "axes[0, 0].scatter(centers_df['total_playtime_hours'], \n",
-        "                   centers_df['total_spent_usd'],\n",
+        "axes[0, 0].scatter(centers_df['PlayTimeHours'], \n",
+        "                   centers_df['InGamePurchases'],\n",
         "                   c='red', marker='x', s=200, linewidths=3, label='Centroids')\n",
         "axes[0, 0].legend()\n",
         "\n",
         "# 2. Sessions vs Login Frequency\n",
-        "scatter2 = axes[0, 1].scatter(df_baseline['total_sessions'], \n",
-        "                               df_baseline['login_frequency_per_week'],\n",
+        "scatter2 = axes[0, 1].scatter(df_baseline['SessionsPerWeek'], \n",
+        "                               df_baseline['SessionsPerWeek'],\n",
         "                               c=df_baseline['cluster'], \n",
         "                               cmap='plasma', \n",
         "                               alpha=0.6, \n",
@@ -380,8 +380,8 @@
         "axes[0, 1].set_title('Clusters: Sessions vs Login Frequency', fontsize=12, fontweight='bold')\n",
         "axes[0, 1].grid(True, alpha=0.3)\n",
         "plt.colorbar(scatter2, ax=axes[0, 1], label='Cluster')\n",
-        "axes[0, 1].scatter(centers_df['total_sessions'], \n",
-        "                   centers_df['login_frequency_per_week'],\n",
+        "axes[0, 1].scatter(centers_df['SessionsPerWeek'], \n",
+        "                   centers_df['SessionsPerWeek'],\n",
         "                   c='red', marker='x', s=200, linewidths=3, label='Centroids')\n",
         "axes[0, 1].legend()\n",
         "\n",
@@ -426,7 +426,7 @@
         "**Model**: K-Means Clustering\n",
         "- **Cluster Sayısı**: 4\n",
         "- **Feature Sayısı**: 4 (minimal set)\n",
-        "- **Features**: total_sessions, total_playtime_hours, total_spent_usd, login_frequency_per_week\n",
+        "- **Features**: SessionsPerWeek, PlayTimeHours, InGamePurchases, login_frequency_per_week\n",
         "- **Preprocessing**: StandardScaler\n",
         "\n",
         "### Baseline Metrikleri\n",
