--- a/notebooks/05_Model_Evaluation.ipynb
+++ b/notebooks/05_Model_Evaluation.ipynb
@@ -135,8 +135,8 @@
       "outputs": [],
       "source": [
         "# Segment profilleri\n",
-        "key_features = ['total_sessions', 'total_playtime_hours', 'total_spent_usd', \n",
-        "                'login_frequency_per_week', 'engagement_score', 'max_level_reached']\n",
+        "key_features = ['SessionsPerWeek', 'PlayTimeHours', 'InGamePurchases', \n",
+        "                'SessionsPerWeek', 'EngagementLevel', 'PlayerLevel']\n",
         "\n",
         "segment_profiles = {}\n",
         "for cluster_id in range(pipeline.n_clusters):\n",
@@ -157,11 +157,11 @@
         "    avg_spending = profile.get('avg_total_spent_usd', 0)\n",
         "    avg_engagement = profile.get('avg_engagement_score', 0)\n",
         "    \n",
-        "    if avg_spending > df_eval['total_spent_usd'].quantile(0.75) and avg_engagement > df_eval['engagement_score'].quantile(0.75):\n",
+        "    if avg_spending > df_eval['InGamePurchases'].quantile(0.75) and avg_engagement > df_eval['EngagementLevel'].quantile(0.75):\n",
         "        segment_names[cluster_id] = \"Whales (High Spenders)\"\n",
-        "    elif avg_engagement > df_eval['engagement_score'].quantile(0.75):\n",
+        "    elif avg_engagement > df_eval['EngagementLevel'].quantile(0.75):\n",
         "        segment_names[cluster_id] = \"Engaged Players\"\n",
-        "    elif avg_spending > df_eval['total_spent_usd'].quantile(0.5):\n",
+        "    elif avg_spending > df_eval['InGamePurchases'].quantile(0.5):\n",
         "        segment_names[cluster_id] = \"Regular Players\"\n",
         "    else:\n",
         "        segment_names[cluster_id] = \"Casual Players\"\n",
