--- a/notebooks/01_EDA.ipynb
+++ b/notebooks/01_EDA.ipynb
@@ -137,10 +137,10 @@
         "- **device_type**: Cihaz tipi (Mobile, PC, Console)\n",
         "\n",
         "### Oyun Davranışı\n",
-        "- **total_sessions**: Toplam oyun oturumu sayısı\n",
-        "- **total_playtime_hours**: Toplam oyun süresi (saat)\n",
+        "- **SessionsPerWeek**: Toplam oyun oturumu sayısı\n",
+        "- **PlayTimeHours**: Toplam oyun süresi (saat)\n",
         "- **avg_session_duration_minutes**: Ortalama oturum süresi (dakika)\n",
-        "- **max_level_reached**: Ulaşılan maksimum seviye\n",
+        "- **PlayerLevel_reached**: Ulaşılan maksimum seviye\n",
         "- **levels_completed**: Tamamlanan seviye sayısı\n",
         "- **quests_completed**: Tamamlanan görev sayısı\n",
         "- **achievements_unlocked**: Açılan başarı sayısı\n",
@@ -153,7 +153,7 @@
         "- **guild_member**: Guild üyeliği (0/1)\n",
         "\n",
         "### Satın Alma Davranışı\n",
-        "- **total_spent_usd**: Toplam harcama (USD)\n",
+        "- **InGamePurchases**: Toplam harcama (USD)\n",
         "- **purchase_count**: Satın alma sayısı\n",
         "- **avg_purchase_value**: Ortalama satın alma değeri\n",
         "- **last_purchase_days_ago**: Son satın alımdan bu yana geçen gün\n",
@@ -193,8 +193,8 @@
         "# Statistical summary for numerical features\n",
         "numerical_cols = df.select_dtypes(include=[np.number]).columns.tolist()\n",
         "# Remove user_id if it's numeric but not meaningful\n",
-        "if 'user_id' in numerical_cols:\n",
-        "    numerical_cols.remove('user_id')\n",
+        "if 'PlayerID' in numerical_cols:\n",
+        "    numerical_cols.remove('PlayerID')\n",
         "\n",
         "print(\"=\" * 60)\n",
         "print(\"NUMERICAL FEATURES SUMMARY\")\n",
@@ -217,8 +217,8 @@
       "source": [
         "# Categorical features distribution\n",
         "categorical_cols = df.select_dtypes(include=['object']).columns.tolist()\n",
-        "if 'user_id' in categorical_cols:\n",
-        "    categorical_cols.remove('user_id')\n",
+        "if 'PlayerID' in categorical_cols:\n",
+        "    categorical_cols.remove('PlayerID')\n",
         "if 'registration_date' in categorical_cols:\n",
         "    categorical_cols.remove('registration_date')\n",
         "\n",
@@ -251,15 +251,15 @@
         "fig, axes = plt.subplots(2, 2, figsize=(15, 10))\n",
         "\n",
         "# Age distribution\n",
-        "axes[0, 0].hist(df['age'], bins=30, edgecolor='black', alpha=0.7)\n",
+        "axes[0, 0].hist(df['Age'], bins=30, edgecolor='black', alpha=0.7)\n",
         "axes[0, 0].set_title('Age Distribution', fontsize=14, fontweight='bold')\n",
         "axes[0, 0].set_xlabel('Age')\n",
         "axes[0, 0].set_ylabel('Frequency')\n",
-        "axes[0, 0].axvline(df['age'].mean(), color='red', linestyle='--', label=f'Mean: {df[\"age\"].mean():.1f}')\n",
+        "axes[0, 0].axvline(df['Age'].mean(), color='red', linestyle='--', label=f'Mean: {df[\"Age\"].mean():.1f}')\n",
         "axes[0, 0].legend()\n",
         "\n",
         "# Gender distribution\n",
-        "gender_counts = df['gender'].value_counts()\n",
+        "gender_counts = df['Gender'].value_counts()\n",
         "axes[0, 1].bar(gender_counts.index, gender_counts.values, color=['#3498db', '#e74c3c', '#9b59b6'])\n",
         "axes[0, 1].set_title('Gender Distribution', fontsize=14, fontweight='bold')\n",
         "axes[0, 1].set_xlabel('Gender')\n",
@@ -268,13 +268,13 @@
         "    axes[0, 1].text(i, v, str(v), ha='center', va='bottom')\n",
         "\n",
         "# Country distribution (top 10)\n",
-        "country_counts = df['country'].value_counts().head(10)\n",
+        "country_counts = df['Location'].value_counts().head(10)\n",
         "axes[1, 0].barh(country_counts.index, country_counts.values, color='#2ecc71')\n",
         "axes[1, 0].set_title('Top 10 Countries', fontsize=14, fontweight='bold')\n",
         "axes[1, 0].set_xlabel('User Count')\n",
         "\n",
         "# Device type distribution\n",
-        "device_counts = df['device_type'].value_counts()\n",
+        "device_counts = df['GameGenre'].value_counts()\n",
         "axes[1, 1].pie(device_counts.values, labels=device_counts.index, autopct='%1.1f%%', startangle=90)\n",
         "axes[1, 1].set_title('Device Type Distribution', fontsize=14, fontweight='bold')\n",
         "\n",
@@ -299,49 +299,49 @@
         "fig, axes = plt.subplots(2, 3, figsize=(18, 10))\n",
         "\n",
         "# Total sessions\n",
-        "axes[0, 0].hist(df['total_sessions'], bins=50, edgecolor='black', alpha=0.7, color='#3498db')\n",
+        "axes[0, 0].hist(df['SessionsPerWeek'], bins=50, edgecolor='black', alpha=0.7, color='#3498db')\n",
         "axes[0, 0].set_title('Total Sessions Distribution', fontsize=12, fontweight='bold')\n",
         "axes[0, 0].set_xlabel('Total Sessions')\n",
         "axes[0, 0].set_ylabel('Frequency')\n",
-        "axes[0, 0].axvline(df['total_sessions'].median(), color='red', linestyle='--', \n",
-        "                    label=f'Median: {df[\"total_sessions\"].median():.0f}')\n",
+        "axes[0, 0].axvline(df['SessionsPerWeek'].median(), color='red', linestyle='--', \n",
+        "                    label=f'Median: {df[\"SessionsPerWeek\"].median():.0f}')\n",
         "axes[0, 0].legend()\n",
         "\n",
         "# Total playtime\n",
-        "axes[0, 1].hist(df['total_playtime_hours'], bins=50, edgecolor='black', alpha=0.7, color='#e74c3c')\n",
+        "axes[0, 1].hist(df['PlayTimeHours'], bins=50, edgecolor='black', alpha=0.7, color='#e74c3c')\n",
         "axes[0, 1].set_title('Total Playtime (Hours) Distribution', fontsize=12, fontweight='bold')\n",
         "axes[0, 1].set_xlabel('Total Playtime (Hours)')\n",
         "axes[0, 1].set_ylabel('Frequency')\n",
-        "axes[0, 1].axvline(df['total_playtime_hours'].median(), color='red', linestyle='--',\n",
-        "                    label=f'Median: {df[\"total_playtime_hours\"].median():.1f}h')\n",
+        "axes[0, 1].axvline(df['PlayTimeHours'].median(), color='red', linestyle='--',\n",
+        "                    label=f'Median: {df[\"PlayTimeHours\"].median():.1f}h')\n",
         "axes[0, 1].legend()\n",
         "\n",
         "# Max level reached\n",
-        "axes[0, 2].hist(df['max_level_reached'], bins=30, edgecolor='black', alpha=0.7, color='#2ecc71')\n",
+        "axes[0, 2].hist(df['PlayerLevel'], bins=30, edgecolor='black', alpha=0.7, color='#2ecc71')\n",
         "axes[0, 2].set_title('Max Level Reached Distribution', fontsize=12, fontweight='bold')\n",
         "axes[0, 2].set_xlabel('Max Level')\n",
         "axes[0, 2].set_ylabel('Frequency')\n",
         "\n",
         "# Total spent\n",
-        "axes[1, 0].hist(df[df['total_spent_usd'] > 0]['total_spent_usd'], bins=50, \n",
+        "axes[1, 0].hist(df[df['InGamePurchases'] > 0]['InGamePurchases'], bins=50, \n",
         "                edgecolor='black', alpha=0.7, color='#f39c12')\n",
         "axes[1, 0].set_title('Total Spent (USD) - Paying Users Only', fontsize=12, fontweight='bold')\n",
         "axes[1, 0].set_xlabel('Total Spent (USD)')\n",
         "axes[1, 0].set_ylabel('Frequency')\n",
-        "axes[1, 0].set_xlim(0, df[df['total_spent_usd'] > 0]['total_spent_usd'].quantile(0.95))\n",
+        "axes[1, 0].set_xlim(0, df[df['InGamePurchases'] > 0]['InGamePurchases'].quantile(0.95))\n",
         "\n",
         "# Engagement score\n",
-        "axes[1, 1].hist(df['engagement_score'], bins=50, edgecolor='black', alpha=0.7, color='#9b59b6')\n",
+        "axes[1, 1].hist(df['EngagementLevel'], bins=50, edgecolor='black', alpha=0.7, color='#9b59b6')\n",
         "axes[1, 1].set_title('Engagement Score Distribution', fontsize=12, fontweight='bold')\n",
         "axes[1, 1].set_xlabel('Engagement Score')\n",
         "axes[1, 1].set_ylabel('Frequency')\n",
         "\n",
         "# Login frequency\n",
-        "axes[1, 2].hist(df['login_frequency_per_week'], bins=50, edgecolor='black', alpha=0.7, color='#1abc9c')\n",
+        "axes[1, 2].hist(df['SessionsPerWeek'], bins=50, edgecolor='black', alpha=0.7, color='#1abc9c')\n",
         "axes[1, 2].set_title('Login Frequency per Week', fontsize=12, fontweight='bold')\n",
         "axes[1, 2].set_xlabel('Logins per Week')\n",
         "axes[1, 2].set_ylabel('Frequency')\n",
-        "axes[1, 2].set_xlim(0, df['login_frequency_per_week'].quantile(0.95))\n",
+        "axes[1, 2].set_xlim(0, df['SessionsPerWeek'].quantile(0.95))\n",
         "\n",
         "plt.tight_layout()\n",
         "plt.show()\n",
@@ -350,12 +350,12 @@
         "print(\"=\" * 60)\n",
         "print(\"GAMING BEHAVIOR SUMMARY\")\n",
         "print(\"=\" * 60)\n",
-        "print(f\"Average sessions per user: {df['total_sessions'].mean():.1f}\")\n",
-        "print(f\"Average playtime per user: {df['total_playtime_hours'].mean():.1f} hours\")\n",
-        "print(f\"Average max level: {df['max_level_reached'].mean():.1f}\")\n",
-        "print(f\"Paying users: {(df['total_spent_usd'] > 0).sum()} ({(df['total_spent_usd'] > 0).mean()*100:.1f}%)\")\n",
-        "print(f\"Average spending (paying users): ${df[df['total_spent_usd'] > 0]['total_spent_usd'].mean():.2f}\")\n",
-        "print(f\"Premium subscribers: {df['premium_subscription'].sum()} ({df['premium_subscription'].mean()*100:.1f}%)\")\n"
+        "print(f\"Average sessions per user: {df['SessionsPerWeek'].mean():.1f}\")\n",
+        "print(f\"Average playtime per user: {df['PlayTimeHours'].mean():.1f} hours\")\n",
+        "print(f\"Average max level: {df['PlayerLevel'].mean():.1f}\")\n",
+        "print(f\"Paying users: {(df['InGamePurchases'] > 0).sum()} ({(df['InGamePurchases'] > 0).mean()*100:.1f}%)\")\n",
+        "print(f\"Average spending (paying users): ${df[df['InGamePurchases'] > 0]['InGamePurchases'].mean():.2f}\")\n",
+        "print(f\"Premium subscribers: {df['InGamePurchases'].sum()} ({df['InGamePurchases'].mean()*100:.1f}%)\")\n"
       ]
     },
     {
@@ -371,9 +371,9 @@
       "source": [
         "# Correlation analysis for key numerical features\n",
         "key_features = [\n",
-        "    'total_sessions', 'total_playtime_hours', 'max_level_reached',\n",
-        "    'total_spent_usd', 'login_frequency_per_week', 'engagement_score',\n",
-        "    'win_rate', 'avg_score', 'purchase_count'\n",
+        "    'SessionsPerWeek', 'PlayTimeHours', 'PlayerLevel',\n",
+        "    'InGamePurchases', 'SessionsPerWeek', 'EngagementLevel',\n",
+        "    'GameDifficulty', 'PlayerLevel', 'InGamePurchases'\n",
         "]\n",
         "\n",
         "corr_matrix = df[key_features].corr()\n",
@@ -420,8 +420,8 @@
         "fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
         "\n",
         "# Playtime vs Spending\n",
-        "axes[0, 0].scatter(df['total_playtime_hours'], df['total_spent_usd'], \n",
-        "                   alpha=0.5, s=20, c=df['engagement_score'], cmap='viridis')\n",
+        "axes[0, 0].scatter(df['PlayTimeHours'], df['InGamePurchases'], \n",
+        "                   alpha=0.5, s=20, c=df['EngagementLevel'], cmap='viridis')\n",
         "axes[0, 0].set_xlabel('Total Playtime (Hours)', fontsize=11)\n",
         "axes[0, 0].set_ylabel('Total Spent (USD)', fontsize=11)\n",
         "axes[0, 0].set_title('Playtime vs Spending (colored by Engagement)', fontsize=12, fontweight='bold')\n",
@@ -430,8 +430,8 @@
         "cbar.set_label('Engagement Score', fontsize=10)\n",
         "\n",
         "# Sessions vs Level\n",
-        "axes[0, 1].scatter(df['total_sessions'], df['max_level_reached'], \n",
-        "                   alpha=0.5, s=20, c=df['win_rate'], cmap='plasma')\n",
+        "axes[0, 1].scatter(df['SessionsPerWeek'], df['PlayerLevel'], \n",
+        "                   alpha=0.5, s=20, c=df['GameDifficulty'], cmap='plasma')\n",
         "axes[0, 1].set_xlabel('Total Sessions', fontsize=11)\n",
         "axes[0, 1].set_ylabel('Max Level Reached', fontsize=11)\n",
         "axes[0, 1].set_title('Sessions vs Level (colored by Win Rate)', fontsize=12, fontweight='bold')\n",
@@ -440,8 +440,8 @@
         "cbar.set_label('Win Rate', fontsize=10)\n",
         "\n",
         "# Login Frequency vs Engagement\n",
-        "axes[1, 0].scatter(df['login_frequency_per_week'], df['engagement_score'], \n",
-        "                   alpha=0.5, s=20, c=df['total_spent_usd'], cmap='YlOrRd')\n",
+        "axes[1, 0].scatter(df['SessionsPerWeek'], df['EngagementLevel'], \n",
+        "                   alpha=0.5, s=20, c=df['InGamePurchases'], cmap='YlOrRd')\n",
         "axes[1, 0].set_xlabel('Login Frequency per Week', fontsize=11)\n",
         "axes[1, 0].set_ylabel('Engagement Score', fontsize=11)\n",
         "axes[1, 0].set_title('Login Frequency vs Engagement (colored by Spending)', fontsize=12, fontweight='bold')\n",
@@ -450,8 +450,8 @@
         "cbar.set_label('Total Spent (USD)', fontsize=10)\n",
         "\n",
         "# Age vs Spending\n",
-        "axes[1, 1].scatter(df['age'], df['total_spent_usd'], \n",
-        "                   alpha=0.5, s=20, c=df['total_playtime_hours'], cmap='coolwarm')\n",
+        "axes[1, 1].scatter(df['Age'], df['InGamePurchases'], \n",
+        "                   alpha=0.5, s=20, c=df['PlayTimeHours'], cmap='coolwarm')\n",
         "axes[1, 1].set_xlabel('Age', fontsize=11)\n",
         "axes[1, 1].set_ylabel('Total Spent (USD)', fontsize=11)\n",
         "axes[1, 1].set_title('Age vs Spending (colored by Playtime)', fontsize=12, fontweight='bold')\n",
