--- a/notebooks/03_Feature_Engineering.ipynb
+++ b/notebooks/03_Feature_Engineering.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Feature Engineering\n\n## Ama\u00e7\n\nDatada olan farkl\u0131 featureleri i\u00e7eri eklemek veya t\u00fcretmek."
+        "# Feature Engineering\n\n## Amaç\n\nDatada olan farklı featureleri içeri eklemek veya türetmek."
       ]
     },
     {
@@ -15,7 +15,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Veri Y\u00fckleme"
+        "## Veri Yükleme"
       ]
     },
     {
@@ -27,13 +27,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Feature Engineering \u0130\u015flemleri\n\n### 1. Ratio Features"
+        "## Feature Engineering İşlemleri\n\n### 1. Ratio Features"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Ratio features\ndf[\"spending_per_hour\"] = df[\"total_spent_usd\"] / (df[\"total_playtime_hours\"] + 1)\ndf[\"sessions_per_week\"] = df[\"total_sessions\"] / ((df[\"days_since_registration\"] / 7) + 1)\ndf[\"level_progress_rate\"] = df[\"levels_completed\"] / (df[\"max_level_reached\"] + 1)\nprint(\"\u2705 Ratio features created\")"
+        "# Ratio features\ndf[\"spending_per_hour\"] = df[\"InGamePurchases\"] / (df[\"PlayTimeHours\"] + 1)\ndf[\"sessions_per_week\"] = df[\"SessionsPerWeek\"] / ((df[\"SessionsPerWeek\"] / 7) + 1)\ndf[\"level_progress_rate\"] = df[\"PlayerLevel\"] / (df[\"PlayerLevel\"] + 1)\nprint(\"✅ Ratio features created\")"
       ]
     },
     {
@@ -45,7 +45,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Interaction features\ndf[\"high_engagement_spender\"] = ((df[\"engagement_score\"] > df[\"engagement_score\"].quantile(0.75)) & (df[\"total_spent_usd\"] > df[\"total_spent_usd\"].quantile(0.75))).astype(int)\ndf[\"casual_player\"] = ((df[\"total_playtime_hours\"] < df[\"total_playtime_hours\"].quantile(0.25)) & (df[\"login_frequency_per_week\"] < df[\"login_frequency_per_week\"].quantile(0.25))).astype(int)\nprint(\"\u2705 Interaction features created\")"
+        "# Interaction features\ndf[\"high_engagement_spender\"] = ((df[\"EngagementLevel\"] > df[\"EngagementLevel\"].quantile(0.75)) & (df[\"InGamePurchases\"] > df[\"InGamePurchases\"].quantile(0.75))).astype(int)\ndf[\"casual_player\"] = ((df[\"PlayTimeHours\"] < df[\"PlayTimeHours\"].quantile(0.25)) & (df[\"SessionsPerWeek\"] < df[\"SessionsPerWeek\"].quantile(0.25))).astype(int)\nprint(\"✅ Interaction features created\")"
       ]
     },
     {
@@ -57,25 +57,25 @@
     {
       "cell_type": "code",
       "source": [
-        "# Encode categorical\nfor col in [\"gender\", \"country\", \"device_type\"]:\n    if col in df.columns:\n        le = LabelEncoder()\n        df[f\"{col}_encoded\"] = le.fit_transform(df[col].astype(str).fillna(\"Unknown\"))\nprint(\"\u2705 Categorical features encoded\")"
+        "# Encode categorical\nfor col in [\"Gender\", \"Location\", \"GameGenre\"]:\n    if col in df.columns:\n        le = LabelEncoder()\n        df[f\"{col}_encoded\"] = le.fit_transform(df[col].astype(str).fillna(\"Unknown\"))\nprint(\"✅ Categorical features encoded\")"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### 4. Model Kar\u015f\u0131la\u015ft\u0131rmas\u0131"
+        "### 4. Model Karşılaştırması"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Baseline vs Feature Engineered\nbaseline_features = [\"total_sessions\", \"total_playtime_hours\", \"total_spent_usd\", \"login_frequency_per_week\"]\nX_baseline = df[baseline_features].fillna(df[baseline_features].median())\nscaler = StandardScaler()\nX_baseline_scaled = scaler.fit_transform(X_baseline)\n\nnumerical_cols = df.select_dtypes(include=[np.number]).columns.tolist()\nif \"user_id\" in numerical_cols:\n    numerical_cols.remove(\"user_id\")\nX_fe = df[numerical_cols].fillna(df[numerical_cols].median())\nX_fe_scaled = scaler.fit_transform(X_fe)\n\n# Compare\nkmeans_baseline = KMeans(n_clusters=4, random_state=42, n_init=10)\nkmeans_fe = KMeans(n_clusters=4, random_state=42, n_init=10)\n\nbaseline_labels = kmeans_baseline.fit_predict(X_baseline_scaled)\nfe_labels = kmeans_fe.fit_predict(X_fe_scaled)\n\nbaseline_sil = silhouette_score(X_baseline_scaled, baseline_labels)\nfe_sil = silhouette_score(X_fe_scaled, fe_labels)\n\nprint(f\"Baseline Silhouette: {baseline_sil:.4f}\")\nprint(f\"Feature Engineered Silhouette: {fe_sil:.4f}\")\nprint(f\"Improvement: {((fe_sil - baseline_sil) / baseline_sil * 100):.2f}%\")"
+        "# Baseline vs Feature Engineered\nbaseline_features = [\"SessionsPerWeek\", \"PlayTimeHours\", \"InGamePurchases\", \"SessionsPerWeek\"]\nX_baseline = df[baseline_features].fillna(df[baseline_features].median())\nscaler = StandardScaler()\nX_baseline_scaled = scaler.fit_transform(X_baseline)\n\nnumerical_cols = df.select_dtypes(include=[np.number]).columns.tolist()\nif \"PlayerID\" in numerical_cols:\n    numerical_cols.remove(\"PlayerID\")\nX_fe = df[numerical_cols].fillna(df[numerical_cols].median())\nX_fe_scaled = scaler.fit_transform(X_fe)\n\n# Compare\nkmeans_baseline = KMeans(n_clusters=4, random_state=42, n_init=10)\nkmeans_fe = KMeans(n_clusters=4, random_state=42, n_init=10)\n\nbaseline_labels = kmeans_baseline.fit_predict(X_baseline_scaled)\nfe_labels = kmeans_fe.fit_predict(X_fe_scaled)\n\nbaseline_sil = silhouette_score(X_baseline_scaled, baseline_labels)\nfe_sil = silhouette_score(X_fe_scaled, fe_labels)\n\nprint(f\"Baseline Silhouette: {baseline_sil:.4f}\")\nprint(f\"Feature Engineered Silhouette: {fe_sil:.4f}\")\nprint(f\"Improvement: {((fe_sil - baseline_sil) / baseline_sil * 100):.2f}%\")"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Feature Engineering Docs\n\n### T\u00fcretilen Feature'lar\n\n1. **Ratio Features**: spending_per_hour, sessions_per_week, level_progress_rate\n2. **Interaction Features**: high_engagement_spender, casual_player\n3. **Categorical Encoded**: gender_encoded, country_encoded, device_type_encoded\n\n### Modele Olan Etkisi\n\nFeature engineering sonras\u0131 model performans\u0131 artm\u0131\u015ft\u0131r."
+        "## Feature Engineering Docs\n\n### Türetilen Feature'lar\n\n1. **Ratio Features**: spending_per_hour, sessions_per_week, level_progress_rate\n2. **Interaction Features**: high_engagement_spender, casual_player\n3. **Categorical Encoded**: gender_encoded, country_encoded, device_type_encoded\n\n### Modele Olan Etkisi\n\nFeature engineering sonrası model performansı artmıştır."
       ]
     }
   ],
