Add prediction variance debug script and improve feature engineering
Added debug_prediction_variance.py to test model predictions on diverse user profiles. Enhanced feature engineering notebook with new ratio and interaction features, improved categorical encoding, and updated clustering evaluation. Modified pipeline.py to use drop_first=False in one-hot encoding for categorical columns. Updated user_segmentation_pipeline.pkl to reflect model changes.

--- a/notebooks/03_Feature_Engineering.ipynb
+++ b/notebooks/03_Feature_Engineering.ipynb
@@ -2,92 +2,219 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "# Feature Engineering\n\n## Amaç\n\nDatada olan farklı featureleri içeri eklemek veya türetmek."
+        "# Feature Engineering\n",
+        "\n",
+        "## Amaç\n",
+        "\n",
+        "Bu notebookta ham veriden model performansını artıracak yeni özellikler (features) türeteceğiz.\n",
+        "\n",
+        "### Yapılacak İşlemler\n",
+        "1. **Ratio Features**: Oransal özellikler (örn. oturum başına oyun süresi)\n",
+        "2. **Interaction Features**: Değişkenlerin etkileşimi\n",
+        "3. **Categorical Encoding**: Kategorik değişkenlerin sayısal temsili\n",
+        "4. **Scaling**: Özelliklerin aynı ölçeğe getirilmesi"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "import pandas as pd\nimport numpy as np\nfrom sklearn.cluster import KMeans\nfrom sklearn.preprocessing import StandardScaler, LabelEncoder\nfrom sklearn.metrics import silhouette_score, davies_bouldin_score\nimport warnings\nimport sys\nfrom pathlib import Path\n\nsys.path.append(str(Path(\"..\").resolve()))\nfrom src.config import *\nfrom src.data_loader import load_gaming_dataset, create_sample_gaming_dataset\n\nwarnings.filterwarnings(\"ignore\")\nprint(\"Libraries imported!\")"
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.cluster import KMeans\n",
+        "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+        "from sklearn.metrics import silhouette_score\n",
+        "import warnings\n",
+        "import sys\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# Add src to path\n",
+        "sys.path.append(str(Path('..').resolve()))\n",
+        "from src.config import *\n",
+        "from src.data_loader import load_gaming_dataset\n",
+        "\n",
+        "warnings.filterwarnings('ignore')\n",
+        "sns.set_style('whitegrid')\n",
+        "print(\"Libraries imported successfully!\")"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Veri Yükleme"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "try:\n    df = load_gaming_dataset(RAW_DATA_DIR)\n    if df is None or len(df) == 0:\n        raise FileNotFoundError(\"Dataset not found\")\nexcept FileNotFoundError:\n    df = create_sample_gaming_dataset(n_samples=20000, save_path=TRAIN_FILE)\n\nprint(f\"Dataset loaded: {df.shape}\")"
+        "df = load_gaming_dataset(RAW_DATA_DIR)\n",
+        "print(f\"Dataset loaded: {df.shape}\")\n",
+        "df.head()"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "## Feature Engineering İşlemleri\n\n### 1. Ratio Features"
+        "## 1. Ratio Features (Oransal Özellikler)\n",
+        "\n",
+        "Mevcut değişkenleri birbirine oranlayarak yeni anlamlı metrikler oluşturuyoruz."
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "# Ratio features\ndf[\"spending_per_hour\"] = df[\"InGamePurchases\"] / (df[\"PlayTimeHours\"] + 1)\ndf[\"sessions_per_week\"] = df[\"SessionsPerWeek\"] / ((df[\"SessionsPerWeek\"] / 7) + 1)\ndf[\"level_progress_rate\"] = df[\"PlayerLevel\"] / (df[\"PlayerLevel\"] + 1)\nprint(\"✅ Ratio features created\")"
+        "# PlayTime per Session (Oturum başına oyun süresi - saat cinsinden)\n",
+        "# PlayTimeHours / SessionsPerWeek\n",
+        "# 0'a bölme hatasını önlemek için +1 eklemiyoruz çünkü SessionsPerWeek genelde > 0 ama kontrol edelim\n",
+        "df['playtime_per_session'] = df['PlayTimeHours'] / df['SessionsPerWeek'].replace(0, 1)\n",
+        "\n",
+        "# Player Level Efficiency\n",
+        "# PlayerLevel / PlayTimeHours (Saat başına ne kadar seviye atlanmış)\n",
+        "df['level_efficiency'] = df['PlayerLevel'] / df['PlayTimeHours'].replace(0, 1)\n",
+        "\n",
+        "# Achievement Rate\n",
+        "# AchievementUnlocked / PlayTimeHours\n",
+        "df['achievement_rate'] = df['AchievementUnlocked'] / df['PlayTimeHours'].replace(0, 1)\n",
+        "\n",
+        "print(\"✅ Ratio features created\")\n",
+        "df[['playtime_per_session', 'level_efficiency', 'achievement_rate']].head()"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "### 2. Interaction Features"
+        "## 2. Interaction Features (Etkileşim Özellikleri)\n",
+        "\n",
+        "Davranışsal kalıpları yakalamak için boolean (True/False) veya segmentasyon bayrakları oluşturuyoruz."
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "# Interaction features\ndf[\"high_engagement_spender\"] = ((df[\"EngagementLevel\"] > df[\"EngagementLevel\"].quantile(0.75)) & (df[\"InGamePurchases\"] > df[\"InGamePurchases\"].quantile(0.75))).astype(int)\ndf[\"casual_player\"] = ((df[\"PlayTimeHours\"] < df[\"PlayTimeHours\"].quantile(0.25)) & (df[\"SessionsPerWeek\"] < df[\"SessionsPerWeek\"].quantile(0.25))).astype(int)\nprint(\"✅ Interaction features created\")"
+        "# Hardcore Gamer: Çok oynayan ve zor seviyede oynayan\n",
+        "# PlayTime > 75. persentil VE GameDifficulty == 'Hard'\n",
+        "\n",
+        "playtime_thresh = df['PlayTimeHours'].quantile(0.75)\n",
+        "df['is_hardcore'] = ((df['PlayTimeHours'] > playtime_thresh) & (df['GameDifficulty'] == 'Hard')).astype(int)\n",
+        "\n",
+        "# High Value Player: Satın alım yapan ve seviyesi yüksek\n",
+        "level_thresh = df['PlayerLevel'].quantile(0.75)\n",
+        "df['is_high_value'] = ((df['InGamePurchases'] == 1) & (df['PlayerLevel'] > level_thresh)).astype(int)\n",
+        "\n",
+        "print(\"✅ Interaction features created\")\n",
+        "print(f\"Hardcore Players: {df['is_hardcore'].sum()}\")\n",
+        "print(f\"High Value Players: {df['is_high_value'].sum()}\")"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "### 3. Categorical Encoding"
+        "## 3. Categorical Encoding\n",
+        "\n",
+        "Modelin (K-Means) anlayabilmesi için metin tabanlı değişkenleri sayısal hale getiriyoruz.\n",
+        "- One-Hot Encoding: GameGenre, Location, GameDifficulty için kullanacağız."
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "# Encode categorical\nfor col in [\"Gender\", \"Location\", \"GameGenre\"]:\n    if col in df.columns:\n        le = LabelEncoder()\n        df[f\"{col}_encoded\"] = le.fit_transform(df[col].astype(str).fillna(\"Unknown\"))\nprint(\"✅ Categorical features encoded\")"
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "\n",
+        "cat_cols = ['GameGenre', 'Location', 'GameDifficulty']\n",
+        "\n",
+        "# Create dummies\n",
+        "df_encoded = pd.get_dummies(df, columns=cat_cols, drop_first=True, dtype=int)\n",
+        "\n",
+        "# Gender - Binary Encode\n",
+        "df_encoded['Gender'] = df_encoded['Gender'].map({'Male': 1, 'Female': 0}).fillna(0)\n",
+        "\n",
+        "print(\"✅ Categorical encoding completed\")\n",
+        "print(f\"New shape: {df_encoded.shape}\")\n",
+        "df_encoded.head()"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "### 4. Model Karşılaştırması"
+        "## 4. Etki Analizi\n",
+        "\n",
+        "Yeni türetilen özelliklerin kümeleme başarısına etkisini basit bir K-Means denemesi ile görelim."
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "# Baseline vs Feature Engineered\nbaseline_features = [\"SessionsPerWeek\", \"PlayTimeHours\", \"InGamePurchases\", \"SessionsPerWeek\"]\nX_baseline = df[baseline_features].fillna(df[baseline_features].median())\nscaler = StandardScaler()\nX_baseline_scaled = scaler.fit_transform(X_baseline)\n\nnumerical_cols = df.select_dtypes(include=[np.number]).columns.tolist()\nif \"PlayerID\" in numerical_cols:\n    numerical_cols.remove(\"PlayerID\")\nX_fe = df[numerical_cols].fillna(df[numerical_cols].median())\nX_fe_scaled = scaler.fit_transform(X_fe)\n\n# Compare\nkmeans_baseline = KMeans(n_clusters=4, random_state=42, n_init=10)\nkmeans_fe = KMeans(n_clusters=4, random_state=42, n_init=10)\n\nbaseline_labels = kmeans_baseline.fit_predict(X_baseline_scaled)\nfe_labels = kmeans_fe.fit_predict(X_fe_scaled)\n\nbaseline_sil = silhouette_score(X_baseline_scaled, baseline_labels)\nfe_sil = silhouette_score(X_fe_scaled, fe_labels)\n\nprint(f\"Baseline Silhouette: {baseline_sil:.4f}\")\nprint(f\"Feature Engineered Silhouette: {fe_sil:.4f}\")\nprint(f\"Improvement: {((fe_sil - baseline_sil) / baseline_sil * 100):.2f}%\")"
+        "# Drop non-numeric for clustering test\n",
+        "drop_cols = ['PlayerID', 'EngagementLevel'] # Target/ID cols\n",
+        "X = df_encoded.drop(columns=[c for c in drop_cols if c in df_encoded.columns])\n",
+        "\n",
+        "# Scale\n",
+        "scaler = StandardScaler()\n",
+        "X_scaled = scaler.fit_transform(X)\n",
+        "\n",
+        "# Simple K-Means\n",
+        "kmeans = KMeans(n_clusters=4, random_state=42, n_init=10)\n",
+        "labels = kmeans.fit_predict(X_scaled)\n",
+        "\n",
+        "score = silhouette_score(X_scaled, labels)\n",
+        "print(f\"Silhouette Score with new features: {score:.4f}\")"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "## Feature Engineering Docs\n\n### Türetilen Feature'lar\n\n1. **Ratio Features**: spending_per_hour, sessions_per_week, level_progress_rate\n2. **Interaction Features**: high_engagement_spender, casual_player\n3. **Categorical Encoded**: gender_encoded, country_encoded, device_type_encoded\n\n### Modele Olan Etkisi\n\nFeature engineering sonrası model performansı artmıştır."
+        "## Sonuç\n",
+        "\n",
+        "Bu özellikleri `pipeline.py` içerisine entegre ederek canlı sistemde kullanabiliriz."
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
       "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 2
+  "nbformat_minor": 5
 }
