Update EDA notebook and README for clarity
Refactored the EDA notebook to remove sample dataset creation and streamline data loading. Updated the README to remove emojis, clarify project structure, and improve documentation for usage, deployment, and results. Updated the model pickle file and several notebooks for consistency with new features and segment definitions.

--- a/notebooks/01_EDA.ipynb
+++ b/notebooks/01_EDA.ipynb
@@ -40,7 +40,7 @@
         "# Add src to path\n",
         "sys.path.append(str(Path('..').resolve()))\n",
         "from src.config import *\n",
-        "from src.data_loader import load_gaming_dataset, create_sample_gaming_dataset\n",
+        "from src.data_loader import load_gaming_dataset\n",
         "\n",
         "warnings.filterwarnings('ignore')\n",
         "sns.set_style('whitegrid')\n",
@@ -64,16 +64,8 @@
       "outputs": [],
       "source": [
         "# Load dataset\n",
-        "try:\n",
-        "    # Try to load existing dataset\n",
-        "    df = load_gaming_dataset(RAW_DATA_DIR)\n",
-        "    if df is None or len(df) == 0:\n",
-        "        raise FileNotFoundError(\"Dataset not found\")\n",
-        "    print(\"✅ Dataset loaded successfully!\")\n",
-        "except FileNotFoundError:\n",
-        "    print(\"Dataset not found. Creating sample dataset...\")\n",
-        "    df = create_sample_gaming_dataset(n_samples=20000, save_path=TRAIN_FILE)\n",
-        "    print(\"✅ Sample dataset created!\")\n",
+        "df = load_gaming_dataset(RAW_DATA_DIR)\n",
+        "print(\"Dataset loaded successfully!\")\n",
         "\n",
         "print(f\"\\nDataset shape: {df.shape}\")\n",
         "print(f\"Rows: {df.shape[0]:,}\")\n",
@@ -114,7 +106,7 @@
         "if len(missing_df) > 0:\n",
         "    print(missing_df)\n",
         "else:\n",
-        "    print(\"✅ No missing values found!\")\n",
+        "    print(\"No missing values found!\")\n",
         "\n",
         "print(\"\\n\" + \"=\" * 60)\n",
         "print(\"DUPLICATE ROWS\")\n",
