--- a/notebooks/03_Feature_Engineering.ipynb
+++ b/notebooks/03_Feature_Engineering.ipynb
@@ -90,7 +90,7 @@
         "# AchievementUnlocked / PlayTimeHours\n",
         "df['achievement_rate'] = df['AchievementUnlocked'] / df['PlayTimeHours'].replace(0, 1)\n",
         "\n",
-        "print(\"✅ Ratio features created\")\n",
+        "print(\"Ratio features created\")\n",
         "df[['playtime_per_session', 'level_efficiency', 'achievement_rate']].head()"
       ]
     },
@@ -119,7 +119,7 @@
         "level_thresh = df['PlayerLevel'].quantile(0.75)\n",
         "df['is_high_value'] = ((df['InGamePurchases'] == 1) & (df['PlayerLevel'] > level_thresh)).astype(int)\n",
         "\n",
-        "print(\"✅ Interaction features created\")\n",
+        "print(\"Interaction features created\")\n",
         "print(f\"Hardcore Players: {df['is_hardcore'].sum()}\")\n",
         "print(f\"High Value Players: {df['is_high_value'].sum()}\")"
       ]
@@ -150,7 +150,7 @@
         "# Gender - Binary Encode\n",
         "df_encoded['Gender'] = df_encoded['Gender'].map({'Male': 1, 'Female': 0}).fillna(0)\n",
         "\n",
-        "print(\"✅ Categorical encoding completed\")\n",
+        "print(\"Categorical encoding completed\")\n",
         "print(f\"New shape: {df_encoded.shape}\")\n",
         "df_encoded.head()"
       ]
