--- a/notebooks/04_Model_Optimization.ipynb
+++ b/notebooks/04_Model_Optimization.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "sys.path.append(str(Path('..').resolve()))\n",
         "from src.config import *\n",
-        "from src.data_loader import load_gaming_dataset, create_sample_gaming_dataset\n",
+        "from src.data_loader import load_gaming_dataset\n",
         "\n",
         "warnings.filterwarnings('ignore')\n",
         "sns.set_style('whitegrid')\n",
@@ -60,12 +60,8 @@
       "outputs": [],
       "source": [
         "# Load dataset\n",
-        "try:\n",
-        "    df = load_gaming_dataset(RAW_DATA_DIR)\n",
-        "    if df is None or len(df) == 0:\n",
-        "        raise FileNotFoundError(\"Dataset not found\")\n",
-        "except FileNotFoundError:\n",
-        "    df = create_sample_gaming_dataset(n_samples=20000, save_path=TRAIN_FILE)\n",
+        "df = load_gaming_dataset(RAW_DATA_DIR)\n",
+        "print(\"Dataset loaded successfully!\")\n",
         "\n",
         "# Feature engineering (baseline'dan sonraki feature set)\n",
         "from src.pipeline import UserSegmentationPipeline\n",
